--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -7,13 +7,39 @@
   <body>
     <header> Soco a 80km/hr: Conheça o Stomatopoda.</header>
     <nav>
-      <li> <a href=""></a></li>
-      <li> <a href=""></a></li>
-      <li> <a href=""></a></li>
+      <li> <a href=""></a>Página Inicial</li>
+      <li> <a href=""></a>Sobre</li>
+      <li> <a href=""></a>Contato</li>
     </nav>
     <article> 
-      <section></section>
-      <section></section>
+      <section>
+        Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho). Apresentam uma grande variação de tamanho, que pode ir de poucos milímetros até aproximadamente 40 cm nas espécies maiores. Eles vivem em fundo consolidado, lodoso ou ainda arenoso, onde cavam seus buracos ou aproveitam-se dos orifícios deixados por outros animais para neles se instalar. São animais exclusivamente carnívoros, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem. O segundo par de patas, muito desenvolvido, é usado tanto para atacar a presa como para se defender. O urópodo, quando aberto, também funciona para defesa, como um escudo, fechando a galeria em que o animal esteja instalado. A fêmea desova no local onde se abriga e, em caso de perigo, enrola os ovos como uma bola, prendendo-os junto ao corpo até encontrar um abrigo mais protegido.
+
+Também conhecidas como esquilas ou lagosta-boxeadora, espalhadas pelas costas dos mares tropicais e subtropicais. Além das patas, elas apresentam uma silhueta característica, devido ao grande comprimento aparentemente de seu abdómen. Os ovos ficam ligados por uma massa gelatinosa que a mãe carrega contra o ventre até que eclodem, limpando-os sem parar.
+
+São animais que apresentam comportamentos sociais muito variados, desde ameaças visuais contra predadores até comportamentos de côrte. De acordo com a anatomia da sua pata raptorial é possível distinguir entre dois grupos funcionais, as perfuradoras (spearers) ou as esmagadoras (smashers), sendo que cada um dos tipos apresenta sua própria variação comportamental e até mesmo de habitat.
+
+As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720km/h) e uma força de impacto de 60 kg/cm².[3] Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.[4][5]
+
+Estomatópodes podem ser encontrados em quase todo o litoral brasileiro, mas não são animais fáceis de se observar pelos seus hábitos mais furtivos. Devem ser manuseados com muita cautela pois são animais preparados para se defender com força, caso sejam incomodados.
+      </section>
+      <section>
+        <h2> Cores para dar e vender:</h2>
+        O estomatopoda possui dezesseis tipos de células cone nos olhos (tipo que detecta cores) significando que eles podem ver um número gigantesco de cores que a gente não consegue nem imaginar.
+      </section>
+      <section>
+        <section> É colorido mas não é pacífico:</section>
+        Ao contrário do que esse monte de cores pode sugerir, esse bicho é bastante agressivo. Ele mata carangueijos, lagostas, quebra vidros de aquário, e qualquer tipo de exoesqueleto de algum artrópode sem sorte o suficiente pra encontrar um desses caras.
+      </section>
+      <section>
+        <h2> Criativamente violento:</h2>
+        "Quebra vidros de aquário?" Você se pergunta. Isso mesmo. A forma que ele faz isso é com seu soco de 80km/h que chega a essa velocidade em menos de 1/3000 de segundo. Se um ser humano conseguisse acelerar o braço dessa forma, conseguiria jogar uma bola de baseball em órbita.
+      </section>
+      <section>
+        <h2> Ninguém chega perto: </h2>
+        O animal que passa mais perto de ter uma visão parecida com a do estomatopoda, é a borboleta. Elas possuem cinco tipo de células detectoras de cores. Mesmo assim ela passa longe da quantidade que o estomatopoda possui, ficando assim, bem de longe com a medalha de prata.
+      </section>
+
     </article>
     <aside>
 
