--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width" />
   </head>
   <body>
-    <header> Soco a 80km/hr: Conheça o Stomatopoda.</header>
+    <header> 
+      <h1>Soco a 80km/hr: Conheça o Stomatopoda.</h1>
+    </header>
     <nav>
       <li> <a href=""></a>Página Inicial</li>
       <li> <a href=""></a>Sobre</li>
@@ -21,14 +23,39 @@ São animais que apresentam comportamentos sociais muito variados, desde ameaça
 
 As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720km/h) e uma força de impacto de 60 kg/cm².[3] Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.[4][5]
 
-Estomatópodes podem ser encontrados em quase todo o litoral brasileiro, mas não são animais fáceis de se observar pelos seus hábitos mais furtivos. Devem ser manuseados com muita cautela pois são animais preparados para se defender com força, caso sejam incomodados.
+Estomatópodes podem ser encontrados em quase todo o litoral brasileiro, mas não são animais fáceis de se observar pelos seus hábitos mais furtivos. Devem ser manuseados com muita cautela pois são animais preparados para se defender com força, caso sejam incomodados. Nesse artigo específico, vou falar sobre uma espécie em particular que tem o nome científico de Odontodactylus scyllarus, e é um dos bichos mais impressionantes que existe. 
+      </section>
+      <section>
+        <h2>
+          Classificação científica:
+        </h2>
+      <table>
+        <tr>
+          <th>Reino</th>
+          <th>Filo</th>
+          <th>Subfilo</th>
+          <th>Classe</th>
+          <th>Subclasse</th>
+          <th>Ordem</th>
+        </tr>
+        <tr>
+          <td>Animalia</td>
+          <td>Artropoda</td>
+          <td>Crustacea</td>
+          <td>Malacostraca</td>
+          <td>Hoplocarida</td>
+          <td>Stomatopoda</td>
+        </tr>
+      </table>
       </section>
       <section>
         <h2> Cores para dar e vender:</h2>
         O estomatopoda possui dezesseis tipos de células cone nos olhos (tipo que detecta cores) significando que eles podem ver um número gigantesco de cores que a gente não consegue nem imaginar.
       </section>
       <section>
-        <section> É colorido mas não é pacífico:</section>
+        <section> 
+          <h2>É colorido mas não é pacífico:</h2>
+        </section>
         Ao contrário do que esse monte de cores pode sugerir, esse bicho é bastante agressivo. Ele mata carangueijos, lagostas, quebra vidros de aquário, e qualquer tipo de exoesqueleto de algum artrópode sem sorte o suficiente pra encontrar um desses caras.
       </section>
       <section>
@@ -42,10 +69,10 @@ Estomatópodes podem ser encontrados em quase todo o litoral brasileiro, mas nã
 
     </article>
     <aside>
-
+      <h3>Assista a este <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">vídeo</a> para mais informações sobre esse bicho fascinante.</h3>
     </aside>
     <footer>
-      
+      <h4>Conteúdo compilado por SPP.</h4>
     </footer>
 
   </body>
