--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -50,21 +50,21 @@ Estomatópodes podem ser encontrados em quase todo o litoral brasileiro, mas nã
       </section>
       <section>
         <h2> Cores para dar e vender:</h2>
-        O estomatopoda possui dezesseis tipos de células cone nos olhos (tipo que detecta cores) significando que eles podem ver um número gigantesco de cores que a gente não consegue nem imaginar.
+        <p>O estomatopoda possui dezesseis tipos de células cone nos olhos (tipo que detecta cores) significando que eles podem ver um número gigantesco de cores que a gente não consegue nem imaginar.</p>
       </section>
       <section>
         <section> 
           <h2>É colorido mas não é pacífico:</h2>
         </section>
-        Ao contrário do que esse monte de cores pode sugerir, esse bicho é bastante agressivo. Ele mata carangueijos, lagostas, quebra vidros de aquário, e qualquer tipo de exoesqueleto de algum artrópode sem sorte o suficiente pra encontrar um desses caras.
+        <p>Ao contrário do que esse monte de cores pode sugerir, esse bicho é bastante agressivo. Ele mata carangueijos, lagostas, quebra vidros de aquário, e qualquer tipo de exoesqueleto de algum artrópode sem sorte o suficiente pra encontrar um desses caras.</p>
       </section>
       <section>
         <h2> Criativamente violento:</h2>
-        "Quebra vidros de aquário?" Você se pergunta. Isso mesmo. A forma que ele faz isso é com seu soco de 80km/h que chega a essa velocidade em menos de 1/3000 de segundo. Se um ser humano conseguisse acelerar o braço dessa forma, conseguiria jogar uma bola de baseball em órbita.
+        <p>"Quebra vidros de aquário?" Você se pergunta. Isso mesmo. A forma que ele faz isso é com seu soco de 80km/h que chega a essa velocidade em menos de 1/3000 de segundo. Se um ser humano conseguisse acelerar o braço dessa forma, conseguiria jogar uma bola de baseball em órbita.</p>
       </section>
       <section>
         <h2> Ninguém chega perto: </h2>
-        O animal que passa mais perto de ter uma visão parecida com a do estomatopoda, é a borboleta. Elas possuem cinco tipo de células detectoras de cores. Mesmo assim ela passa longe da quantidade que o estomatopoda possui, ficando assim, bem de longe com a medalha de prata.
+        <p>>O animal que passa mais perto de ter uma visão parecida com a do estomatopoda, é a borboleta. Elas possuem cinco tipo de células detectoras de cores. Mesmo assim ela passa longe da quantidade que o estomatopoda possui, ficando assim, bem de longe com a medalha de prata.</p>
       </section>
 
     </article>
