--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <style>
+      .floater {
+        float: right;
+      }
+    </style>
   </head>
   <body>
     <header> 
@@ -13,7 +18,13 @@
       <li> <a href=""></a>Sobre</li>
       <li> <a href=""></a>Contato</li>
     </nav>
-    <article> 
+    <br>
+    <br>
+    <article>
+      <h2>
+        Fatos sobre o Stomatopoda:
+      </h2>
+      
       <section>
         Os estomatópodes são predadores ativos que caçam presas com o auxílio de um sentido de visão muito apurado e capaz de interpretar polarização no espectro ultravioleta e infravermelho). Apresentam uma grande variação de tamanho, que pode ir de poucos milímetros até aproximadamente 40 cm nas espécies maiores. Eles vivem em fundo consolidado, lodoso ou ainda arenoso, onde cavam seus buracos ou aproveitam-se dos orifícios deixados por outros animais para neles se instalar. São animais exclusivamente carnívoros, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem. O segundo par de patas, muito desenvolvido, é usado tanto para atacar a presa como para se defender. O urópodo, quando aberto, também funciona para defesa, como um escudo, fechando a galeria em que o animal esteja instalado. A fêmea desova no local onde se abriga e, em caso de perigo, enrola os ovos como uma bola, prendendo-os junto ao corpo até encontrar um abrigo mais protegido.
 
@@ -21,10 +32,16 @@ Também conhecidas como esquilas ou lagosta-boxeadora, espalhadas pelas costas d
 
 São animais que apresentam comportamentos sociais muito variados, desde ameaças visuais contra predadores até comportamentos de côrte. De acordo com a anatomia da sua pata raptorial é possível distinguir entre dois grupos funcionais, as perfuradoras (spearers) ou as esmagadoras (smashers), sendo que cada um dos tipos apresenta sua própria variação comportamental e até mesmo de habitat.
 
-As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720km/h) e uma força de impacto de 60 kg/cm².[3] Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.[4][5]
+As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720km/h) e uma força de impacto de 60 kg/cm². Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.
 
 Estomatópodes podem ser encontrados em quase todo o litoral brasileiro, mas não são animais fáceis de se observar pelos seus hábitos mais furtivos. Devem ser manuseados com muita cautela pois são animais preparados para se defender com força, caso sejam incomodados. Nesse artigo específico, vou falar sobre uma espécie em particular que tem o nome científico de Odontodactylus scyllarus, e é um dos bichos mais impressionantes que existe. 
       </section>
+      <br>
+      <br>
+      <br>
+      <aside class="floater">
+        <h3>Assista a este <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">vídeo</a> para mais informações sobre esse bicho fascinante.</h3>
+      </aside>
       <section>
         <h2>
           Classificação científica:
@@ -51,26 +68,28 @@ Estomatópodes podem ser encontrados em quase todo o litoral brasileiro, mas nã
       <section>
         <h2> Cores para dar e vender:</h2>
         <p>O estomatopoda possui dezesseis tipos de células cone nos olhos (tipo que detecta cores) significando que eles podem ver um número gigantesco de cores que a gente não consegue nem imaginar.</p>
+        <img src="http://frontpageokinawa.hmthost.com/images/MantisShrimp-1777.jpg">
       </section>
       <section>
         <section> 
           <h2>É colorido mas não é pacífico:</h2>
         </section>
         <p>Ao contrário do que esse monte de cores pode sugerir, esse bicho é bastante agressivo. Ele mata carangueijos, lagostas, quebra vidros de aquário, e qualquer tipo de exoesqueleto de algum artrópode sem sorte o suficiente pra encontrar um desses caras.</p>
+        <img src="https://2.bp.blogspot.com/-1PV5lKMj81c/UABQGlYJOEI/AAAAAAAAAAk/-leJKM65QuU/s1600/251895_410052119031881_1948484440_n.jpg">
       </section>
       <section>
         <h2> Criativamente violento:</h2>
         <p>"Quebra vidros de aquário?" Você se pergunta. Isso mesmo. A forma que ele faz isso é com seu soco de 80km/h que chega a essa velocidade em menos de 1/3000 de segundo. Se um ser humano conseguisse acelerar o braço dessa forma, conseguiria jogar uma bola de baseball em órbita.</p>
+        <img src="https://vignette2.wikia.nocookie.net/homealone/images/8/8e/Traps.png/revision/20121119124111">
       </section>
       <section>
         <h2> Ninguém chega perto: </h2>
-        <p>>O animal que passa mais perto de ter uma visão parecida com a do estomatopoda, é a borboleta. Elas possuem cinco tipo de células detectoras de cores. Mesmo assim ela passa longe da quantidade que o estomatopoda possui, ficando assim, bem de longe com a medalha de prata.</p>
+        <p>O animal que passa mais perto de ter uma visão parecida com a do estomatopoda, é a borboleta. Elas possuem cinco tipo de células detectoras de cores. Mesmo assim ela passa longe da quantidade que o estomatopoda possui, ficando assim, bem de longe com a medalha de prata.</p>
+        <img src="https://hosting.photobucket.com/images/i/sameuls/Bronze_Medal_Meme_Banner_(1).jpg?width=1920&height=1080&fit=bounds">
       </section>
 
     </article>
-    <aside>
-      <h3>Assista a este <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">vídeo</a> para mais informações sobre esse bicho fascinante.</h3>
-    </aside>
+
     <footer>
       <h4>Conteúdo compilado por SPP.</h4>
     </footer>
