--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -87,6 +87,15 @@ Estomatópodes podem ser encontrados em quase todo o litoral brasileiro, mas nã
         <p>O animal que passa mais perto de ter uma visão parecida com a do estomatopoda, é a borboleta. Elas possuem cinco tipo de células detectoras de cores. Mesmo assim ela passa longe da quantidade que o estomatopoda possui, ficando assim, bem de longe com a medalha de prata.</p>
         <img src="https://hosting.photobucket.com/images/i/sameuls/Bronze_Medal_Meme_Banner_(1).jpg?width=1920&height=1080&fit=bounds">
       </section>
+      <section>
+        <h4>
+          Bibliografia:
+        </h4>
+        <ul>
+          <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipedia</a></li>
+          <li><a href="https://theoatmeal.com/comics/mantis_shrimp">The Oat Meal</a></li>
+        </ul>
+      </section>
 
     </article>
 
