Acessibilidade 0 Known problems

--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
   <head>
+    <Title>O Estomatopoda</Title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <style>
@@ -11,16 +12,16 @@
   </head>
   <body>
     <header> 
-      <h1>Soco a 80km/hr: Conheça o Stomatopoda.</h1>
+      <h1 id="PI">Soco a 80km/hr: Conheça o Stomatopoda.</h1>
     </header>
     <nav>
-      <li> <a href=""></a>Página Inicial</li>
-      <li> <a href=""></a>Sobre</li>
-      <li> <a href=""></a>Contato</li>
+      <li> <a href="#PI">Página Inicial</a></li>
+      <li> <a href="#A">Sobre</a></li>
+      <li> <a href="https://www.sinonimos.com.br/contato/">Contato</a></li>
     </nav>
     <br>
     <br>
-    <article>
+    <article id="A">
       <h2>
         Fatos sobre o Stomatopoda:
       </h2>
@@ -68,29 +69,29 @@ Estomatópodes podem ser encontrados em quase todo o litoral brasileiro, mas nã
       <section>
         <h2> Cores para dar e vender:</h2>
         <p>O estomatopoda possui dezesseis tipos de células cone nos olhos (tipo que detecta cores) significando que eles podem ver um número gigantesco de cores que a gente não consegue nem imaginar.</p>
-        <img src="http://frontpageokinawa.hmthost.com/images/MantisShrimp-1777.jpg">
+        <img src="http://frontpageokinawa.hmthost.com/images/MantisShrimp-1777.jpg" alt="imagem mostrando um estomatopoda em seu habitat natural">
       </section>
       <section>
         <section> 
           <h2>É colorido mas não é pacífico:</h2>
         </section>
         <p>Ao contrário do que esse monte de cores pode sugerir, esse bicho é bastante agressivo. Ele mata carangueijos, lagostas, quebra vidros de aquário, e qualquer tipo de exoesqueleto de algum artrópode sem sorte o suficiente pra encontrar um desses caras.</p>
-        <img src="https://2.bp.blogspot.com/-1PV5lKMj81c/UABQGlYJOEI/AAAAAAAAAAk/-leJKM65QuU/s1600/251895_410052119031881_1948484440_n.jpg">
+        <img src="https://2.bp.blogspot.com/-1PV5lKMj81c/UABQGlYJOEI/AAAAAAAAAAk/-leJKM65QuU/s1600/251895_410052119031881_1948484440_n.jpg" alt="Dora a aventureira atirando com uma 12 em alguém que não fez o que ela pediu">
       </section>
       <section>
         <h2> Criativamente violento:</h2>
         <p>"Quebra vidros de aquário?" Você se pergunta. Isso mesmo. A forma que ele faz isso é com seu soco de 80km/h que chega a essa velocidade em menos de 1/3000 de segundo. Se um ser humano conseguisse acelerar o braço dessa forma, conseguiria jogar uma bola de baseball em órbita.</p>
-        <img src="https://vignette2.wikia.nocookie.net/homealone/images/8/8e/Traps.png/revision/20121119124111">
+        <img src="https://vignette2.wikia.nocookie.net/homealone/images/8/8e/Traps.png/revision/20121119124111" alt="Um dos bandidos molhados do 'Esqueceram de Mim' sendo tostado por um maçarico">
       </section>
       <section>
         <h2> Ninguém chega perto: </h2>
         <p>O animal que passa mais perto de ter uma visão parecida com a do estomatopoda, é a borboleta. Elas possuem cinco tipo de células detectoras de cores. Mesmo assim ela passa longe da quantidade que o estomatopoda possui, ficando assim, bem de longe com a medalha de prata.</p>
-        <img src="https://hosting.photobucket.com/images/i/sameuls/Bronze_Medal_Meme_Banner_(1).jpg?width=1920&height=1080&fit=bounds">
+        <img src="https://hosting.photobucket.com/images/i/sameuls/Bronze_Medal_Meme_Banner_(1).jpg?width=1920&height=1080&fit=bounds" alt="Meme da medalha de bronze colocando os seres humanos como terceiro, achando que são os melhores quando o assunto é visão, enquanto a borboleta e o estomatopoda estão em segundo e primeiro lugar no pódio" >
       </section>
       <section>
-        <h4>
+        <h3>
           Bibliografia:
-        </h4>
+        </h3>
         <ul>
           <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipedia</a></li>
           <li><a href="https://theoatmeal.com/comics/mantis_shrimp">The Oat Meal</a></li>
